--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="container al-center">
         
         <div class="forecast">
-            <button class="glow-on-hover b-2 lang-button_forecast"><a href="Forecast/index.html" target="_blank">Weather forecast</a></button>
+            <a href="/Forecast/index.html" target="_blank"><button class="glow-on-hover b-2 lang-button_forecast">Weather forecast</button></a>
         </div>
         <div class="current">
-            <button class="glow-on-hover b-1 lang-button_current"><a href="Current/index.html" target="_blank">Current weather</a></button>
+            <a href="/Current/index.html" target="_blank"><button class="glow-on-hover b-1 lang-button_current">Current weather</button></a>
         </div>
         <div class="error">
-            <button class="glow-on-hover b-3 lang-button_err"><a href="mailto:pavliukov.ps@gmail.com">If you find an error, writing me.</a></button>
+            <a href="mailto:pavliukov.ps@gmail.com"><button class="glow-on-hover b-3 lang-button_err">If you find an error, writing me.</button></a>
         </div>
 
     </div>
